--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -4,6 +4,8 @@
 <title> First File</title>
 </head>
 <body>
-<h1> Hello World! </h1>
+<h1> To Do List</h1>
+<p>Things you have to do</p>
+ <button id="push">Add</button>
 </body>
 </html>
