--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <title> To Do List</title>
+<script src= "Interactivity.js"> </script></script>
 </head>
 <body>
 <h1> To Do List</h1>
-<p>Things you have to do</p>
- <button id="push">Add</button>
+<p id ="noItem" >Nothing to do</p>
+ <button type="button" onclick="addItem()" >Add "Do Laundry"</button>
+
 </body>
 </html>
