--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -7,7 +7,6 @@
 <body>
 <h1> To Do List</h1>
 <p id ="noItem" >Nothing to do</p>
- <button type="button" onclick="addItem()" >Add "Do Laundry"</button>
-
+ <input id = "userInput" type="text"><button type="button" onclick="addItem()" >Add </button>
 </body>
 </html>
