--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1> To Do List</h1>
-<p id ="noItem" >Nothing to do</p>
+<p id ="List" ></p>
  <input id = "userInput" type="text"><button type="button" onclick="addItem()" >Add </button>
 </body>
 </html>
