--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -7,6 +7,8 @@
 <body>
 <h1> To Do List</h1>
 <p id ="List" ></p>
- <input id = "userInput" type="text"><button type="button" onclick="addItem()" >Add </button>
+ <input id = "userInput" type="text">
+ <button onclick="addItem()" >Add </button>
+ 
 </body>
 </html>
